Updating e2e & test login success

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,9 @@
 [pytest]
 markers =
     e2e: end to end tests
-    api: Api Tests
+    api: api tests
     ui: UI Tests
+    login: login tests
 
-addopts = -v -s
+addopts = -v -s --alluredir=./allure-results
 #addopts = -v -s -html=report.html
